# Juskeshino

./: .gitignore  Setup.sh
ToInstall/USB/: 80-festinoRobot.rules  80-justinaRobot.rules  80-vujicicRobot.rules
catkin_ws/: .gitignore  TMR.pgm  TMR.yaml  frames.gv  planta_baja_2.yaml  temp.txt
catkin_ws/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/install/include/conceptual_deps/: GetConDep.h  GetConDepRequest.h  GetConDepResponse.h  GetTextConDep.h  GetTextConDepRequest.h  GetTextConDepResponse.h  StringArray.h
catkin_ws/install/include/robotino_msgs/: AnalogReadings.h  DigitalReadings.h  EncoderReadings.h  MotorReadings.h  PowerReadings.h  ResetOdometry.h  ResetOdometryRequest.h  ResetOdometryResponse.h  SetEncoderPosition.h  SetEncoderPositionRequest.h  SetEncoderPositionResponse.h
catkin_ws/install/lib/pkgconfig/: conceptual_deps.pc  config_files.pc  exploration.pc  face_reco_pkg.pc  freenect_launch.pc  robotino_description.pc  robotino_msgs.pc  vujicic_description.pc
catkin_ws/install/share/face_reco_pkg/: package.xml
catkin_ws/src/config_files/: groceries_classification_rb2024.yaml  groceries_classification_rm.yaml  groceries_classification_test.yaml  known_locations.yaml  known_locations_TMR2024.yaml  known_locations_objects.yaml  known_locations_simul.yaml  known_locs_serving_sim.yaml  receptionist_knowledge.yaml  receptionist_knowledge_lab_daniel.yaml
catkin_ws/src/config_files/maps/: Lab_arena_hor_clean.yaml  TMR_Itzel.yaml  TR2.pgm  TR2.yaml  Three_rooms.pgm  Three_rooms.yaml  appartment_changed.yaml  auditorio.pgm  auditorio.yaml  blank_map.pgm  blank_map.yaml  congreso.pgm  first_summit.pgm  first_summit.yaml  justina_map.pgm  justina_map.yaml  lab_20240513.pgm  lab_20240513.yaml  mapa_planta_baja.pgm  mapa_planta_baja.yaml  planta_baja_2.pgm  rbc_2024.pgm  rbc_2024.yaml  test_map.yaml  tmr.pgm  tmr.yaml
catkin_ws/src/config_files/navigation/: auditorio_location.yaml  known_locations_gazebo.launch  known_locations_gazebo.yaml  known_locations_gpsr.yaml  known_locations_lab.yaml  known_locations_planta_baja.yaml  known_locations_planta_baja_2.yaml  known_locations_robocup_2024.yaml
catkin_ws/src/config_files/prohibition_maps/: AllBlank.pgm  AllBlank.yaml  Lab_arena_hor_blocked.yaml  TMR_Itzel_original.pgm  Three_rooms.yaml  appartment_changed.pgm  auditorio.pgm  blank_map.pgm  congreso.pgm  congreso.yaml  fonseca_map.pgm  fonseca_map.yaml  justina_map.pgm  lab_20240513.pgm  map_2024_03.pgm  map_2024_03.yaml  mapa_itzel.pgm  mapa_planta_baja.pgm  planta_baja_2.pgm  rbc_2024.pgm  tmr.pgm
catkin_ws/src/config_files/rviz/: festino_navigation.rviz  justina.rviz  justina_gazebo.rviz  justina_gazebo_mapless.rviz  justina_mapless.rviz  justina_navigation.rviz  (+2 more)
catkin_ws/src/graspnet/: CMakeLists.txt  package.xml
catkin_ws/src/juskeshino_tools/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/juskeshino_tools/include/juskeshino_tools/: JuskeshinoManip.h  JuskeshinoNavigation.h  JuskeshinoVision.h
catkin_ws/src/juskeshino_tools/scripts/juskeshino_tools/: JuskeshinoHRI.py  JuskeshinoHardware.py  JuskeshinoKnowledge.py  JuskeshinoManipulation.py  JuskeshinoNavigation.py  JuskeshinoSimpleTasks.py  JuskeshinoVision.py
catkin_ws/src/juskeshino_tools/src/: JuskeshinoNavigation.cpp  JuskeshinoVision.cpp
catkin_ws/src/navigation/vq_cuda/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/vq_cuda/src/: Utils.cpp  Utils.h  vq.cu  vq_cuda_node.cpp
catkin_ws/src/planning/speech_rec/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/planning/speech_rec/scripts/: vosk_service.py  whisper_node.py  whisper_service.py
catkin_ws/src/regnet/: CMakeLists.txt  package.xml
catkin_ws/src/tutorial_cpp/: CMakeLists.txt  package.xml
catkin_ws/src/tutorial_cpp/launch/: launch.launch
catkin_ws/src/tutorial_cpp/src/: publicador_ejemplo.cpp  simple.cpp
catkin_ws/src/vision/: clothes_color_srv.py
catkin_ws/src/vision/human_pose_estimation/: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  package.xml
catkin_ws/src/vision/human_pose_estimation/scripts/: clothes_color_srv.py  clothes_color_test.py  pointing_hands_detector.py  pointing_hands_detectorRyo.py
catkin_ws/src/vision/human_pose_estimation/src/: human_detector.cpp  pose_estimator_srv.cpp  streaming_keypoints.cpp
catkin_ws/src/vision/human_pose_estimation/src/human_pose_estimation/: __init__.py  pointing_hands_detector.py  raise_hands_detector.py
catkin_ws/src/vision/obj_pose_and_grip/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/vision/obj_pose_and_grip/src/: obj_pose_and_grip_node.cpp
dataset2_robocup/: no_entrenar.json
dataset_robocup/: 001a.json  002a.json  003a.json  004.json  004a.json  005.json  005a.json  006.json  006a.json  007.json  007a.json  008.json  008a.json  009.json  009a.json  010.json  010a.json  011a.json  012.json  013.json  014a.json  015.json  016.json  017a.json  019.json  019a.json  021.json  022.json  023.json  024.json  025.json  025a.json  026.json  027.json  028.json  028a.json  029a.json  03.json  030.json  030a.json  (+98 more)
dataset_robocup/YOLODataset/: dataset.yaml
dataset_robocup/json/: 001.json  002.json  004.json  004a.json  005.json  005a.json  006a.json  007.json  009.json  009a.json  010a.json  011.json  012a.json  013a.json  014.json  015a.json  016a.json  017.json  018.json  018a.json  020.json  020a.json  021a.json  022a.json  023a.json  024a.json  026a.json  027a.json  029.json  033.json  033a.json  034.json  035.json  035a.json  036a.json  038.json  039a.json  040.json  041.json  042a.json  (+110 more)
dataset_robocup/yolo_converted_dataset/YOLODataset/: dataset.yaml
(+2290 files in other folders)
