<?xml version="1.0"?>
<package format="2">
  <name>ros_whisper_vosk</name>
  <version>0.0.0</version>
  <description>ROS wrapper for Whisper and Vosk</description>

  <maintainer email="todo@todo.todo">todo</maintainer>
  
  <license>TODO</license>
   
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  
  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
